# D.Coder

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  VALIDATION.md  commit-remaining.sh  docker-compose.yml  gpt5-pro.md  nx.json  package.json  pnpm-workspace.yaml  prompt.txt  setup-remaining-services.sh
services/agent-orchestrator/: .env.example  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  project.json  pyproject.toml  requirements.txt
services/agent-orchestrator/.claude/agents/: agent-orchestrator-dev.md
services/agent-orchestrator/.github/workflows/: ci.yml
services/agent-orchestrator/docs/: 00-Overview.md  01-Requirements.md  02-Architecture.md  03-APIs.md  04-Events.md  05-Integrations.md  06-Configuration.md  07-Security-and-Guardrails.md  08-Testing-and-Observability.md  09-Roadmap.md  10-Glossary.md
services/agent-orchestrator/src/: main.py
services/agent-orchestrator/src/adapters/: __init__.py
services/agent-orchestrator/src/adapters/inbound/: __init__.py
services/agent-orchestrator/src/domain/: __init__.py
services/agent-orchestrator/src/infrastructure/: __init__.py  context.py
services/agent-orchestrator/tests/: __init__.py  conftest.py
services/agent-orchestrator/tests/e2e/: conftest.py  test_workflow_flow.py
services/agent-orchestrator/tests/integration/: test_health_endpoints.py  test_langgraph_service.py  test_metrics.py
services/agent-orchestrator/tests/unit/: test_agent_graph.py  test_http_clients.py  test_jwt_validation.py  test_mcp_registry.py
(+349 files in other folders)
